Mesh deform doesn't update in edit mode. #80098

Closed
opened 2020-08-25 11:34:56 +02:00 by Sebastian Parborg · 4 comments

System Information
Operating system: Gentoo Linux
Graphics card: AMD 580

Blender Version
Broken: deaff945d0
Retested on master 189ba40e9b today as well

Short description of error

Mesh deform doesn't update in edit mode anymore.
In addition to this, older files with mesh deform are potentially broken as they need to be rebound. Otherwise they will not update outside of edit mode either.

Exact steps for others to reproduce the error
mesh_deform.blend

  1. Open the attached file
  2. Move around the selected vert
  3. Notice that the ico sphere is not deformed in edit mode or object mode.
  4. Rebind the ico sphere
  5. Notice that the sphere still doesn't update in edit mode.

recording.mp4

**System Information** Operating system: Gentoo Linux Graphics card: AMD 580 **Blender Version** Broken: deaff945d0 Retested on master 189ba40e9b today as well **Short description of error** Mesh deform doesn't update in edit mode anymore. In addition to this, older files with mesh deform are potentially broken as they need to be rebound. Otherwise they will not update outside of edit mode either. **Exact steps for others to reproduce the error** [mesh_deform.blend](https://archive.blender.org/developer/F8810158/mesh_deform.blend) 1. Open the attached file 2. Move around the selected vert 3. Notice that the ico sphere is not deformed in edit mode or object mode. 4. Rebind the ico sphere 5. Notice that the sphere still doesn't update in edit mode. [recording.mp4](https://archive.blender.org/developer/F8810160/recording.mp4)
Author
Member

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Campbell Barton self-assigned this 2020-08-26 00:48:54 +02:00

This issue was referenced by e0772c6607

This issue was referenced by e0772c6607ae6cd48193101b39d7332cb76ab2c9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80098
No description provided.