Fix T80098: Mesh deform doesn't update in edit mode

Use BKE_mesh_wrapper API access to access mesh coordinates
for modifier evaluation.

Call BKE_mesh_wrapper_ensure_mdata when binding
since it's a one off operation.

Regression from deaff945d0b96.

Reviewed by: @brecht

Ref D8709